--- a/style.css
+++ b/style.css
@@ -34,4 +34,47 @@ nav a{
     color: white;
 }
 
+/* header */
+.head-container h1{
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 50px;
+    color: #13183F;
+    padding: 38px 0 26px 0;
+}
+.head-container p{
+    padding-bottom: 24px;
+}
+.head-container button{
+    background: linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
+    border-radius: 31.5px;
+    width: 167px;
+    height: 56px;
+    border: none;
+    color: white;
+}
+.image-hero-wrapper img{
+    width: 100%;
+    padding-bottom: 66px;
+}
 
+
+
+/* content body */
+.body-container{
+    display: grid;
+    grid-template-columns: auto  ;
+    row-gap: 40px;
+}
+.colored-container{
+    background: linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
+    border-radius: 10px;
+    height: 120px;
+    max-width: 343px;
+}
+.colored-container p{
+    font-weight: 800;
+    font-size: 24px;
+    color: #FFFFFF;
+    padding: 30px 30px;
+}
