--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ nav a{
 
 
 
-/* content body */
+/* main content body */
 .body-container{
     display: grid;
     grid-template-columns: auto  ;
