--- a/style.css
+++ b/style.css
@@ -11,10 +11,8 @@ body{
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
+    color: #83869A;
     background:linear-gradient(180deg, #FFFFFF 0%, #F0F1FF 100%); ;
-}
-body > :not(footer){
-    margin: 1rem;
 }
 
 /* general styles */
@@ -26,7 +24,11 @@ body > :not(footer){
     width: 140px;
     height: 48px;
 }
-
+.font{
+    font-weight: 800;
+    color: #13183F;
+    line-height: 35px;
+}
 
 
 /* navigation */
@@ -34,23 +36,22 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 1rem 1rem 0 1rem;
 }
 nav a{
-    font-weight: 800;
     font-size: 28px;
-    line-height: 35px;
-    color: #13183F;
 }
 nav button{
     background: #13183F;
 }
 
-/* header */
+/* header text*/
+.head-container > :not(.image-hero){
+    margin: 1rem;
+}
 .head-container h1{
-    font-weight: 800;
     font-size: 40px;
     line-height: 50px;
-    color: #13183F;
     padding: 38px 0 26px 0;
 }
 .head-container p{
@@ -61,14 +62,25 @@ nav button{
     width: 167px;
     height: 56px;
 }
-.image-hero-wrapper img{
+
+
+.image-hero{
+    background-image: url(assets/image-hero-mobile@2x.webp);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 435px 409px;
+    height: 386px;
     width: 100%;
+    margin: auto;
     padding-bottom: 66px;
+    
 }
 
 
-
 /* main content body */
+main{
+    margin: 1rem 1rem 0 1rem;
+}
 .card-container{
     display: grid;
     row-gap: 40px;
@@ -81,7 +93,6 @@ nav button{
 
 }
 .intro-card p{
-    font-weight: 800;
     font-size: 24px;
     color: #FFFFFF;
     padding: 30px 30px;
@@ -104,16 +115,12 @@ nav button{
 }
 
 .card-element h2{
-    font-weight: 800;
     font-size: 20px;
-    line-height: 25px;
-    color: #13183F;
     padding-bottom: 16px;
 }
 .card-element a{
     font-weight: 700;
     font-size: 18px;
-    line-height: 28px;
     color: #F74780;
 
 }
@@ -133,10 +140,8 @@ footer{
 }
 footer button{
     background: linear-gradient(180deg, #4851FF 0%, #F02AA6 100%);
-    line-height: 28px;
 }
 footer p{
-    font-weight: 800;
+    color: white !important;
     font-size: 28px;
-    line-height: 35px;
 }
