--- a/style.css
+++ b/style.css
@@ -165,9 +165,9 @@ footer button:hover{
 }
 
 
-@media (min-width: 740px) {
+@media (min-width: 786px) {
     body > :not(footer){
-        margin: 0 2.5rem;
+        margin: 0 40px;
     }
     .card-container{
         grid-template-columns: repeat(2, 1fr); 
@@ -184,36 +184,27 @@ footer button:hover{
         max-width: 398px;
     }
     .image-tablet{
-        /* background:url(/assets/image-hero-tablet@2x.png);
-        display:block; */
+        background:url(assets/image-hero-tablet.png);
     }
+
 
     .intro-card p{
         padding-top: 56px;
     }
     footer{
-        padding: 0rem 2.4375rem 0 2.4375rem;
+        padding: 0 40px;
     }
 }
 
-@media (min-width:1200px) {
+@media (min-width:1440px) {
     .card-container{
         grid-template-columns: repeat(3, 1fr);
         gap: 80px 30px;
     }
-    /* nav{
-        margin: 2rem 10.3125rem 0 10.3125rem;
-    }
-    .head-container {
-        margin: 0 10.3125rem 0 10.3125rem;
-    }
-    main{
-        margin: 0rem 10.3125rem 0 10.3125rem;
-    }
-    .intro-card p{
-        padding-top: 64px;
+    body > :not(footer){
+        margin:0 165px 0 165px;
     }
     footer{
-        padding: 0rem 10.3125rem 0 10.3125rem;
-    } */
+        padding: 0 165px 0 165px;
+    }
 }
